<resources>
    <string name="app_name">组织力</string>
    <string name="action_settings">设置</string>
    <string name="hello_world">欢迎</string>
    <string name="ani_time">250</string>
    <string name="ani_time2">500</string>
    <string name="check_network">正在检测网络</string>
    <string name="home_tab_feed">动态</string>
    <string name="home_tab_msg_list">消息</string>
    <string name="home_tab_contacts">通讯录</string>
    <string name="home_tab_message">聊天</string>
    <string name="home_tab_message_forward">转发选择</string>
    <string name="login">登录</string>
    <string name="input_account_hint">请输入邮箱或手机号</string>
    <string name="input_password_hint">请输入密码</string>
    <string name="input_characters_format_error">格式错误！请输入除汉字以外的其他字符</string>
    <string name="account_name_required">请输入登录帐号</string>
    <string name="account_password_required">请输入登陆密码</string>
    <string name="right_phone_number_required">请输入正确的手机号码</string>
    <string name="forgetpass">忘记密码</string>
    <string name="choicesocial">请选择社区</string>
    <string name="install_fail_file_not_exist">安装文件已不存在</string>
    <string name="sample_content">Sample of dragging the content.\nThe menu consists of a ListView, for which the
        active position is saved through configuration changes.\nAdditionally, if the menu is open, a back press will
        close it.</string>
    <string name="sample_layout">This sample shows how to use the drawer in a layout file.
        \nThe top drawer is used in this sample.</string>
    <string name="menu_refresh">刷新</string>
    <string name="menu_search">搜索</string>
    <string name="menu_share">分享</string>
    <string name="action_bar_title">标题</string>
    <string name="error_message">哎呀，出错了</string>
    <string name="reason">可能原因：</string>
    <string name="reason_hint_one">网络不稳定</string>
    <string name="reason_hint_two">尚未接入互联网</string>
    <string name="reason_hint_three">安全软件禁止访问网络</string>
    <string name="error_refresh">刷新</string>
    <string name="reset_network">设置网络</string>
    <string name="click_to_load_older_message">网络有问题，点击重新载入</string>
    <string name="pull_to_refresh_pull_label">下拉可以刷新…</string>
    <string name="more">更多</string>
    <string name="loading">加载中…</string>
    <string name="updatetime">更新于</string>
    <string name="new_messages_count">%s条新消息</string>
    <string name="empty">空</string>
    <string name="publish_write">文字</string>
    <string name="publish_pic">图片</string>
    <string name="publish_music">音频</string>
    <string name="publish_vedio">视频</string>
    <string name="publish_file">文件</string>
    <string name="publish_approval">审批</string>
    <string name="select_title">标题（选填）</string>
    <string name="select_content">内容</string>
    <string name="publish_photoalbum_name">图片册名称（必填）</string>
    <string name="publish_photoalbum_describe">图片册描述（选填）</string>
    <string name="publish_file_name">文件夹名称（必填）</string>
    <string name="publish_file_describe">文件夹描述（选填）</string>
    <string name="edit_file_origin_name">文件原名称</string>
    <string name="edit_file_describe">文件描述</string>
    <string name="publish_priority_hint">仅成员可见</string>
    <string name="upload_to">上传到:</string>
    <string name="ablum_select_hint">请选择图片册</string>
    <string name="register">注册</string>
    <string name="construction">新建</string>
    <string name="inputemail">请输入邮箱</string>
    <string name="inputpass">请输入密码</string>
    <string name="truename">真实姓名</string>
    <string name="phonenumber">手机号码</string>
    <string name="phone_number_required">请输入手机号码</string>
    <string name="phoneerror">手机号码错误</string>
    <string name="validatephone">验证手机号</string>
    <string name="get_request_code_hint">获取手机验证码</string>
    <string name="input_request_code_hint">请输入6位验证码</string>
    <string name="request_code_commit">验证</string>
    <string name="forgot_pwd_toast_code_sended">验证码已发送</string>
    <string name="forgot_pwd_toast_code_err">验证码错误</string>
    <string name="inputusername">请输入姓名</string>
    <string name="can_not_get_session">不能获取session</string>
    <string name="validate_code_required">请输入6位验证码</string>
    <string name="old_password">旧密码</string>
    <string name="new_password">新密码</string>
    <string name="repeat_new_password">重复新密码</string>
    <string name="changepass">修改密码</string>
    <string name="submit">提交</string>
    <string name="adviseback">意见反馈</string>
    <string name="feedback">请写下您的问题或建议，感谢您的支持！</string>
    <string name="company">直立人科技公司版权所有</string>
    <string name="rights">Copyright © 2012 zuzhili.com.All rights reserved</string>
    <string name="companyphone">400-010-2010</string>
    <string name="companyemail">service@zhiliren.com</string>
    <string name="aboutus">关于我们</string>
    <string name="dialog_filter_top_title">动态筛选</string>
    <string name="news_filter_all">全部</string>
    <string name="news_filter_word">文字</string>
    <string name="news_filter_pic">图片</string>
    <string name="news_filter_file">文件</string>
    <string name="news_filter_music">音频</string>
    <string name="news_filter_vedio">视频</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="relogin">重新登陆</string>
    <string name="next_step">下一步</string>
    <string name="news_all">全站动态</string>
    <string name="news_my_focus">我关注的</string>
    <string name="publish_image">传图片</string>
    <string name="publish_text">发布文字</string>
    <string name="publish_main">发布</string>
    <string name="phone_cemara">相机拍摄</string>
    <string name="phone_albums">手机相册</string>
    <string name="select_resource">选择来源</string>
    <string name="image_chosed_hint">此图片已选择</string>
    <string name="image_chose_max_hint">最多可添加5张图片！</string>
    <string name="add_image_desc">添加描述</string>
    <string name="image_edit">图片编辑</string>
    <string name="not_found_image">图片没有找到</string>
    <string name="load_image_first_hint">请先加载图片</string>
    <string name="image_desc_str_hint">最多允许输入200个字符</string>
    <string name="image_desc_add_hint">请输入图片描述</string>
    <string name="image_delete_hint">删除该图片？</string>
    <string name="authority_hint">仅成员可见</string>
    <string name="create_new_album">新建图片册</string>
    <string name="create_new_chat">新建聊天</string>
    <string name="album_name_str_hint">请输入图片册名称</string>
    <string name="folder_name_str_hint">请输入文件夹名称</string>
    <string name="album_name_length_hint">相册名称最多允许输入20个字符</string>
    <string name="folder_name_length_hint">文件夹名称最多允许输入20个字符</string>
    <string name="album_desc_length_hint">相册描述最多允许输入200个字符</string>
    <string name="folder_desc_length_hint">文件夹描述最多允许输入200个字符</string>
    <string name="create_success_hint">创建成功</string>
    <string name="title_select_album">选择相册</string>
    <string name="publish_success_hint">发布成功</string>
    <string name="title_publish_music">传音频</string>
    <string name="folder_select_hint">请选择文件夹</string>
    <string name="folder_name_hint">文件夹名称（必填）</string>
    <string name="folder_desc_hint">文件夹描述（选填）</string>
    <string name="title_create_folder">新建文件夹</string>
    <string name="title_select_music">选择音频</string>
    <string name="music_size_hint">单个文件不能超过10MB哦！</string>
    <string name="music_upload_count_hint">一次最多上传5个音频文件</string>
    <string name="title_edit_file">文件编辑</string>
    <string name="title_edit_music">音频编辑</string>
    <string name="title_edit_vedio">视频编辑</string>
    <string name="file_edit_name_hint">文件名太长了，不要超出30字哦！</string>
    <string name="file_edit_desc_hint">描述太长了，不要超出200字哦！</string>
    <string name="file_edit_name_null_hint">文件名不能为空哦！</string>
    <string name="file_delete_hint">确定删除这个文件？</string>
    <string name="sd_shared">请您先退出USB模式,再运行该应用</string>
    <string name="sd_unmounted">SD卡未加载到手机</string>
    <string name="sd_removed">此应用需要SD卡才能使用</string>
    <string name="sd_noinsert">未找到SD卡</string>
    <string name="list_refresh">视频列表已刷新！</string>
    <string name="title_publish_vedio">发布视频</string>
    <string name="delete_vedio_hint">删除该视频？</string>
    <string name="select_folder_hint">请选择文件夹</string>
    <string name="select_vedio_hint">请选择视频</string>
    <string name="input_vedio_name_hint">请输入视频名称</string>
    <string name="select_music_hint">请选择音频文件</string>
    <string name="sending_hint">正在发送...</string>
    <string name="select_album_hint">请选择图片册</string>
    <string name="select_image_hint">请选择图片</string>
    <string name="title_publish_file">传文件</string>
    <string name="file_too_large_hint">单个文件大小不能超过10M,请重新选择</string>
    <string name="action_repost">转发</string>
    <string name="action_comment">评论</string>
    <string name="action_collect">收藏</string>
    <string name="title_select_vedio_hint">选择视频</string>
    <string name="draftbox">草稿箱</string>
    <string name="invitefriends">邀请好友</string>
    <string name="logout">注销登录</string>
    <string name="title_member">社区成员</string>
    <string name="title_more">更多</string>
    <string name="hint_add_content">请输入内容</string>
    <string name="publishevent">转发到首页</string>
    <string name="publishtrend">同时评论</string>
    <string name="title_trend_detail">动态详情</string>
    <string name="send">发送</string>
    <string name="voice_send">按住 说话</string>
    <string name="photograph">拍摄</string>
    <string name="photo">照片</string>
    <string name="file">文件</string>
    <string name="social_title_summary">社区资料</string>
    <string name="createuser">创建人</string>
    <string name="intro">简介</string>
    <string name="social_name">社区名称</string>
    <string name="social_memeber_count">社区人数</string>
    <string name="social_your_name_required">请填写在该社区使用的名称</string>
    <string name="social_apply_reason_required">请输入申请理由</string>
    <string name="social_apply_confirm">申请</string>
    <string name="social_apply">申请加入</string>
    <string name="social_apply_cancel">取消</string>
    <string name="sendsuccess">申请成功</string>
    <string name="space_apply_reason_acquired">请输入申请理由</string>
    <string name="social_request_err_not_long_enough">申请理由不能少于20个字符</string>
    <string name="social_request_err_name">请输入名称</string>
    <string name="reply">评论了</string>
    <string name="reply_to">回复</string>
    <string name="trend_not_exist">该条动态不存在，可能已经被删除</string>
    <string name="title_reply_comment">回复</string>
    <string name="title_publish_comment">发表评论</string>
    <string name="passrestart">密码错误!请重新输入</string>
    <string name="inputnewpass">请输入新密码</string>
    <string name="inputoldpass">请输入旧密码</string>
    <string name="passlimite">密码不能少于6位</string>
    <string name="diffnumerror">旧密码和新密码输入的一样，请重新输入</string>
    <string name="reinputpass">请再次输入新密码</string>
    <string name="passsameerror">两次密码不相同</string>
    <string name="changesuccess">修改成功</string>
    <string name="passtypeerror">密码格式错误！请输入除汉字以外的其他字符</string>
    <string name="title_edit_repost">转发编辑</string>
    <string name="delete_comment_success">删除评论成功</string>
    <string name="thistitle">这是标题</string>
    <string name="articledetail">文章详情</string>
    <string name="title_at_me">提到我的</string>
    <string name="title_my_comments">我的评论</string>
    <string name="title_my_message">聊天</string>
    <string name="publish_failed_hint">发布失败</string>
    <string name="contentapproval">内容审批</string>
    <string name="approval_yes">同意</string>
    <string name="approval_no">拒绝</string>
    <string name="approval_edit">编辑</string>
    <string name="approval_from">来自Anroid客户端</string>
    <string name="approval_records">审批记录</string>
    <string name="approval_detail">审批详情</string>
    <string name="news_time">2012-9-10 18:00</string>
    <string name="title_message_list">消息</string>
    <string name="desc_front">共有</string>
    <string name="audio">音频</string>
    <string name="video">视频</string>
    <string name="todo">任务</string>
    <string name="new_msg_notification_title">组织力</string>
    <string name="guide_third_top">通讯录</string>
    <string name="guide_third_buttom">全新的分类通讯录,找人更轻松</string>
    <string name="guide_dirs">互联网信息化管理平台</string>
    <string name="guide_start">开启组织力</string>
</resources>