<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    android:orientation="vertical"
    android:background="@drawable/dialog_broader"
    android:padding="20dp"
    >
    <EditText
        android:id="@+id/input_name"
        android:layout_width="fill_parent"
   	 	android:layout_height="wrap_content" 
   	 	android:gravity="top"
   	 	android:background="@drawable/edit_text_selector"
   	 	android:hint="@string/social_your_name_required"
   	 	android:layout_marginBottom="10dp"
        />
    
    <EditText
        android:id="@+id/input"
        android:layout_width="fill_parent"
   	 	android:layout_height="wrap_content" 
   	 	android:gravity="top"
   	 	android:background="@drawable/edit_text_selector"
   	 	android:hint="@string/social_apply_reason_required"
        />
    <LinearLayout
    	android:orientation="horizontal"
    	android:layout_width="fill_parent"
    	android:layout_marginBottom="2dp"
   	 	android:layout_height="30dp" 
   	 	android:layout_marginTop="10dp"
   	 	>
    	<Button
    	    android:id="@+id/ok"
    	    android:layout_width="0dp"
    	    android:layout_weight="1"
   	 		android:layout_height="fill_parent" 
   	 		android:background="@drawable/blue_btn_selector"
   	 		android:textColor="@color/white"
   	 		android:text="@string/social_apply_confirm"
    	/>
    	<Button
    	    android:id="@+id/cancel"
    	    android:layout_width="0dp"
    	    android:layout_weight="1"
   	 		android:layout_height="fill_parent" 
   	 		android:layout_marginLeft="10dp"
   	 		android:background="@drawable/blue_btn_selector"
   	 		android:textColor="@color/white"
   	 		android:text="@string/social_apply_cancel"
    	/>
    
	</LinearLayout>
</LinearLayout>
