<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:background="@drawable/popover_background_right">

    <Button
        android:id="@+id/btn_audio_more_group"
        android:layout_marginTop="5dp"
        android:text="@string/audio"
        android:textColor="@color/white"
        android:textSize="@dimen/font_size_m"
        android:layout_width="60dp"
        android:layout_height="60dp" />

    <Button
        android:id="@+id/btn_video_more_group"
        android:layout_marginTop="5dp"
        android:text="@string/video"
        android:textColor="@color/white"
        android:textSize="@dimen/font_size_m"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_toRightOf="@+id/btn_audio_more_group"/>

    <Button
        android:id="@+id/btn_todo_more_group"
        android:layout_marginTop="5dp"
        android:textColor="@color/white"
        android:textSize="@dimen/font_size_m"
        android:text="@string/todo"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_toRightOf="@+id/btn_video_more_group"/>

</RelativeLayout>