<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/page_bg"
    android:orientation="vertical"
    android:paddingLeft="14dip"
    android:paddingRight="14dip" >

    <EditText
        android:id="@+id/txt_registe_username"
        android:layout_width="fill_parent"
        android:layout_height="37dip"
        android:layout_marginTop="24dip"
        android:textColor="@color/text_black"
        style="@style/editTextCommonStyle"
        android:hint="@string/inputusername"
        android:imeOptions="actionNext" />

    <EditText
        android:id="@+id/txt_registe_password"
        android:layout_width="match_parent"
        android:layout_height="37dip"
        android:layout_marginTop="14dip"
        android:textColor="@color/text_black"
        style="@style/editTextCommonStyle"
        android:hint="@string/inputpass"
        android:imeOptions="actionDone"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/registe"
        android:layout_width="fill_parent"
        android:layout_height="37dip"
        android:layout_marginTop="14dp"
        style="@style/loginButtonCommonStyle"
        android:text="@string/register"/>

</LinearLayout>
